-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.6.0
-
3
-
14232
I got a crash while test master on rhel7 server:
[ 1004.695685] BUG: unable to handle kernel paging request at 000000012fdcc006 [ 1004.696210] IP: [<ffffffffa08ef44b>] mdc_read_page+0x15b/0xa00 [mdc] [ 1004.696305] PGD 118f3067 PUD 0 [ 1004.696305] Oops: 0000 [#1] SMP [ 1004.696305] Modules linked in: ext4 loop lustre(OF) ofd(OF) osp(OF) lod(OF) ost(OF) mdt(OF) mdd(OF) mgs(OF) nodemap(OF) osd_ldiskfs(OF) ldiskfs(OF) mbcache lquota(OF) lfsck(OF) jbd2 obdecho(OF) mgc(OF) lov(OF) osc(OF) mdc(OF) lmv(OF) fid(OF) fld(OF) ptlrpc(OF) obdclass(OF) ksocklnd(OF) lnet(OF) sha512_generic libcfs(OF) netconsole ip6t_rpfilter ip6t_REJECT ipt_REJECT xt_conntrack ebtable_nat ebtable_broute bridge stp llc ebtable_filter ebtables ip6table_nat nf_conntrack_ipv6 nf_defrag_ipv6 nf_nat_ipv6 ip6table_mangle ip6table_security ip6table_raw ip6table_filter ip6_tables iptable_nat nf_conntrack_ipv4 nf_defrag_ipv4 nf_nat_ipv4 nf_nat nf_conntrack iptable_mangle iptable_security iptable_raw iptable_filter ip_tables sg dm_mirror dm_region_hash serio_raw i2c_piix4 pcspkr dm_log dm_mod virtio_balloon virtio_console mperf xfs libcrc32c sr_mod cdrom ata_generic pata_acpi virtio_blk virtio_net qxl drm_kms_helper ata_piix ttm drm virtio_pci virtio_ring i2c_core virtio libata floppy [last unloaded: llog_test] [ 1004.696305] CPU: 1 PID: 20938 Comm: lfs Tainted: GF W O-------------- 3.10.0-121.el7.x86_64 #1 [ 1004.696305] Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011 [ 1004.696305] task: ffff880017fbdb00 ti: ffff880024518000 task.ti: ffff880024518000 [ 1004.696305] RIP: 0010:[<ffffffffa08ef44b>] [<ffffffffa08ef44b>] mdc_read_page+0x15b/0xa00 [mdc] [ 1004.696305] RSP: 0018:ffff880024519c10 EFLAGS: 00010046 [ 1004.696305] RAX: 0000000000000055 RBX: ffff880018308c00 RCX: 0000000000000000 [ 1004.696305] RDX: 000000012fdcc006 RSI: ffff88003fd0e428 RDI: 0000000000000046 [ 1004.696305] RBP: ffff880024519ce8 R08: 0000000000000096 R09: 0000000000004877 [ 1004.696305] R10: 0000160000000000 R11: 0000000000000a02 R12: fffffffffffffffe [ 1004.696305] R13: ffff880004d6e1d8 R14: ffff880004d6e1f0 R15: ffff880016880c00 [ 1004.696305] FS: 00007f883b912740(0000) GS:ffff88003fd00000(0000) knlGS:0000000000000000 [ 1004.696305] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033 [ 1004.696305] CR2: 000000012fdcc006 CR3: 000000003adbe000 CR4: 00000000000006e0 [ 1004.696305] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000 [ 1004.696305] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400 [ 1004.696305] Stack: [ 1004.696305] 000000000c2c6dd7 ffff880012a1036f ffff880012a11000 ffff880024519d50 [ 1004.696305] ffff880024519d08 0000000000000000 000000012fdcc006 ffffffff812c41e4 [ 1004.696305] 0000000000000000 0000000000000000 0000000000000001 ffff880012a1031d [ 1004.696305] Call Trace: [ 1004.696305] [<ffffffff812c41e4>] ? vsnprintf+0x234/0x6a0 [ 1004.696305] [<ffffffffa08f43ad>] mdc_read_entry+0x9d/0x430 [mdc] [ 1004.696305] [<ffffffffa06e8c72>] lmv_read_entry+0x1b2/0x5a0 [lmv] [ 1004.696305] [<ffffffffa0e9e064>] ll_dir_entry_start+0xf4/0x4d0 [lustre] [ 1004.696305] [<ffffffffa0ee3bb0>] ? ll_invalidate_negative_children+0x1b0/0x1b0 [lustre] [ 1004.696305] [<ffffffffa0e9e9c7>] ll_dir_read+0x97/0x290 [lustre] [ 1004.696305] [<ffffffff811c32c0>] ? fillonedir+0xe0/0xe0 [ 1004.696305] [<ffffffffa0e9ece6>] ll_readdir+0x126/0x480 [lustre] [ 1004.696305] [<ffffffff811c32c0>] ? fillonedir+0xe0/0xe0 [ 1004.696305] [<ffffffff811c32c0>] ? fillonedir+0xe0/0xe0 [ 1004.696305] [<ffffffff811c32c0>] ? fillonedir+0xe0/0xe0 [ 1004.696305] [<ffffffff811c31b0>] vfs_readdir+0xb0/0xe0 [ 1004.696305] [<ffffffff811afaf0>] ? vfs_write+0x160/0x1e0 [ 1004.696305] [<ffffffff811c35d5>] SyS_getdents+0x95/0x120 [ 1004.696305] [<ffffffff815fc819>] system_call_fastpath+0x16/0x1b [ 1004.696305] Code: e2 e8 ba e4 9c e0 85 c0 0f 8e fa 04 00 00 48 8b b5 58 ff ff ff 48 ba 00 00 00 00 00 00 ff ff 48 85 d6 0f 84 10 07 00 00 48 89 f2 <48> 8b 02 f6 c4 80 0f 85 27 07 00 00 f0 ff 42 1c 0f 1f 44 00 00 [ 1004.696305] RIP [<ffffffffa08ef44b>] mdc_read_page+0x15b/0xa00 [mdc] [ 1004.696305] RSP <ffff880024519c10> [ 1004.696305] CR2: 000000012fdcc006 [ 1004.696305] ---[ end trace 48e05798eddf5980 ]--- [ 1004.696305] Kernel panic - not syncing: Fatal exception [ 1004.696305] drm_kms_helper: panic occurred, switching back to text console
Just run sanity can easy to reproduce it. It obvious relate to previous test status, So only run test_65ic cannot show up.
- is related to
-
LU-7777 toss 3 client kernel panic in ll_get_dir_page()
-
- Resolved
-