LU-5162 mdc: Add exception entry check for radix_tree

We need check exception entry after radix_tree lookup.

lustre-commit: c394068ee148595711c661651368b91373bcc78a
lustre-review: http://review.whamcloud.com/10709

Signed-off-by: Yang Sheng <yang.sheng@intel.com>
Change-Id: I9a8493e0de7d44f04b00d43919ed5f3ab6c1d0d9