lustre/llite/dir.c
@@ -274,21 +274,21 @@ static struct page *ll_dir_page_locate(struct inode *dir, __u64 *hash,
         int found;
 
 	spin_lock_irq(&mapping->tree_lock);
-        found = radix_tree_gang_lookup(&mapping->page_tree,
-                                       (void **)&page, offset, 1);
-        if (found > 0) {
-                struct lu_dirpage *dp;
+	found = radix_tree_gang_lookup(&mapping->page_tree,
+			(void **)&page, offset, 1);
+	if (found > 0 && !radix_tree_exceptional_entry(page)) {
+		struct lu_dirpage *dp;
 
-                page_cache_get(page);
+		page_cache_get(page);
 		spin_unlock_irq(&mapping->tree_lock);
-                /*
-                 * In contrast to find_lock_page() we are sure that directory
-                 * page cannot be truncated (while DLM lock is held) and,
-                 * hence, can avoid restart.
-                 *
-                 * In fact, page cannot be locked here at all, because
+		/*
+		 * In contrast to find_lock_page() we are sure that directory
+		 * page cannot be truncated (while DLM lock is held) and,
+		 * hence, can avoid restart.
+		 *
+		 * In fact, page cannot be locked here at all, because
 		 * ll_dir_filler() does synchronous io.
-                 */
+		 */
 		wait_on_page_locked(page);
 		if (PageUptodate(page)) {
 			dp = kmap(page);
